added nav footer and index content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOXMad</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-    hola que tal
-</body>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+      <!-- Manu -->
+    <div class = "header">
+        <header class = "logo"></header>
+        <nav class = "nav">
+            <ul>
+                <li><img src=""> </li>
+                <li><a href="#">IHOME</a></li>
+                <li><a href="#">IBOXPARK</a></li>
+                <li><a href="#">IPACKS</a></li>
+                <li><a href="#">ICONTACTO</a></li>
+            </ul>
+        </nav>
+    </div>
+<!-- SERGIO -->
+    <div id="main-img">
+        <h1 id="title">Descubre nuestro centro</h1>
+        <a href="#">BOTON</a>
+        <!-- añadir bootstrap bottom -->
+    </div>
+
+    <div id="content">
+        <div class="container-box-img">
+            <div class="box">
+                <h2>Nuestro Centro</h2>
+                <h2>BOXPARK</h2>
+                <p>Conoce los servicios, instalaciones y actividades de nuestro centro multiaventura</p>
+                <!-- añadir bootstrap bottom -->
+            </div>
+            <div class="content img-one"></div>
+        </div>
+
+        <div class="container-box-img">
+            <div class="box">
+                <h2>Nuestras ofertas</h2>
+                <h2>PACKS</h2>
+                <p>Disfruta de nuestra oferta de cursos y actividades realizadas por nuestros partners</p>
+                <a href="#">BOTON</a>
+                <!-- añadir bootstrap bottom -->
+
+            </div>
+            <div class="content img-two"></div>
+        </div>
+        <div class="container-box-img">
+            <div class="box">
+                <h2>Sobre Nosotros</h2>
+                <h2>BOXMAD</h2>
+                <p>Adentrate a descubrir nuestra historia</p>
+                <a href="#">BOTON</a>
+                <!-- añadir bootstrap bottom -->
+            </div>
+            <div class="content img-three"></div>
+        </div>
+    </div>
+   
+
+<!--Javi-->
+<footer>
+    <!--Hay dos contenedores principales dentro del footer left y rigth-->
+    <div class="footer-left">
+            <!--Logo goes here-->
+      <h1>Logo</h1>
+    </div>
+    <div class="footer-right">
+     <div class="info">
+       <div class="info-title">
+        <h4>Info</h4>
+          <div class="info-items">
+            <div class="info-items" id="">Contact us</div>
+            <div class="info-items" id="">Instagram</div>
+            <div class="info-items" id="">Twitter</div>
+            <div class="info-items" id="">Youtube</div>             
+          </div>
+       </div>
+     </div>
+       
+     <div class="social">
+         <h4>Follow</h4>
+          <div class="social-title">
+            <div class="social-logo" id="facebook">Facebook</div>
+            <div class="social-logo" id="instagram">Instagram></div>
+            <div class="social-logo" id="twitter">Twitter</div>
+            <div class="social-logo" id="youtube">Youtube</div>
+          </div>
+     </div>
+       
+     <div class="location">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3038.7924004491583!2d-3.6999276842409006!3d40.391293465109385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422649fcbcbb33%3A0x87d5ff456d9c7f48!2sMatadero%20Madrid!5e0!3m2!1sen!2ses!4v1615819598018!5m2!1sen!2ses" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+       </div>
+    </div> 
+  </footer>
+  </body>
 </html>
