added some animations, BoxPark.html and main index content

--- a/index.html
+++ b/index.html
@@ -23,42 +23,42 @@
     </div>
 <!-- SERGIO -->
     <div id="main-img">
-        <h1 id="title">Descubre nuestro centro</h1>
-        <a href="#">BOTON</a>
+      <a href="boxPark.html"><h1 id="title">Descubre nuestro centro</h1></a>
         <!-- añadir bootstrap bottom -->
     </div>
 
     <div id="content">
         <div class="container-box-img">
             <div class="box">
-                <h2>Nuestro Centro</h2>
-                <h2>BOXPARK</h2>
+                <h2 class="heading-main">Nuestro Centro</h2>
+                <h2 class="heading-secondary">BOXPARK</h2>
                 <p>Conoce los servicios, instalaciones y actividades de nuestro centro multiaventura</p>
+                <a href="boxPark.html">BOTON</a>
                 <!-- añadir bootstrap bottom -->
             </div>
-            <div class="content img-one"></div>
+            <div class="img-box  img-one"></div>
         </div>
 
         <div class="container-box-img">
             <div class="box">
-                <h2>Nuestras ofertas</h2>
-                <h2>PACKS</h2>
+                <h2 class="heading-main">Nuestras ofertas</h2>
+                <h2 class="heading-secondary">PACKS</h2>
                 <p>Disfruta de nuestra oferta de cursos y actividades realizadas por nuestros partners</p>
                 <a href="#">BOTON</a>
                 <!-- añadir bootstrap bottom -->
 
             </div>
-            <div class="content img-two"></div>
+            <div class="img-box img-two"></div>
         </div>
         <div class="container-box-img">
             <div class="box">
-                <h2>Sobre Nosotros</h2>
-                <h2>BOXMAD</h2>
+                <h2 class="heading-main">Sobre Nosotros</h2>
+                <h2 class="heading-secondary">BOXMAD</h2>
                 <p>Adentrate a descubrir nuestra historia</p>
                 <a href="#">BOTON</a>
                 <!-- añadir bootstrap bottom -->
             </div>
-            <div class="content img-three"></div>
+            <div class="img-box  img-three"></div>
         </div>
     </div>
    
