change the text of nav

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav class = "nav">
             <ul class= "navList">
                 <li><img src=""> </li>
-                <li><a class = "navA" href="#">IHOME</a></li>
-                <li><a class = "navA" href="#">IBOXPARK</a></li>
-                <li><a class = "navA" href="#">IPACKS</a></li>
-                <li><a class = "navA" href="#">ICONTACTO</a></li>
+                <li><a class = "navA" href="#">HOME</a></li>
+                <li><a class = "navA" href="#">BOXPARK</a></li>
+                <li><a class = "navA" href="#">PACKS</a></li>
+                <li><a class = "navA" href="#">CONTACTO</a></li>
             </ul>
         </nav>
     </div>
