boxpark changed and header-img added

--- a/boxPark.html
+++ b/boxPark.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="css/footer.css" rel="stylesheet" type="text/css" />
+    <link href="css/boxpark.css" rel="stylesheet" type="text/css" />
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BOXPARK</title>
@@ -22,6 +25,18 @@
             <li><a class = "navA" href="#">CONTACTO</a></li>
         </ul>
     </nav>
+</div>
+
+<!--JAVI BELOW-->
+
+<!--Header of boxpark-->
+<div class="header-boxpark">
+    <div class="header-boxpark-content">
+        <img src="img/boxpark-header-img.jpeg" alt="" class="header-boxpark-img">
+        <div class="header-boxpark-title">
+
+        </div>
+    </div>
 </div>
     <!--footer -->
  <div id="footer-placeholder">
