--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
   </head>
   <body>
       <!-- Manu -->
-    <div class = "header">
+      <div class = "header">
         <header class = "logo"></header>
         <nav class = "nav">
             <ul class= "navList">
                 <li><img src=""> </li>
-                <li><a class = "navA" href="#">IHOME</a></li>
-                <li><a class = "navA" href="#">IBOXPARK</a></li>
-                <li><a class = "navA" href="#">IPACKS</a></li>
-                <li><a class = "navA" href="#">ICONTACTO</a></li>
+                <li><a class = "navA" href="#">HOME</a></li>
+                <li><a class = "navA" href="#">BOXPARK</a></li>
+                <li><a class = "navA" href="packs.html">PACKS</a></li>
+                <li><a class = "navA" href="#">CONTACTO</a></li>
             </ul>
         </nav>
-    </div>
+      </div>
+    
 <!-- SERGIO -->
-    <div id="header-container">
-        <a href="boxPark.html"><h1 id="title">COMIENZA LA AVENTURA</h1></a>
-        <!-- añadir bootstrap bottom -->
-    </div>
-
+      <div class="header-container index-img">
+        
+          <a href="boxPark.html"><h1 id="title">COMIENZA LA AVENTURA</h1></a>
+          <!-- añadir bootstrap bottom -->
+      </div>
     <div id="content">
         <div class="container-box-img">
             <div class="box">
