new changes by javier on wednesday 15h

--- a/boxPark.html
+++ b/boxPark.html
@@ -33,11 +33,15 @@
 <div class="header-boxpark">
     <div class="header-boxpark-content">
         <img src="img/boxpark-header-img.jpeg" alt="" class="header-boxpark-img">
-        <div class="header-boxpark-title">
-
-        </div>
+            <div class="header-boxpark-title">
+                <h1>What is madbox?</h1>
+            </div>
     </div>
 </div>
+<!--Header of boxpark-->
+<!--Articles container-->
+
+
     <!--footer -->
  <div id="footer-placeholder">
 
