--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOXMad</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="css/footer.css" rel="stylesheet" type="text/css" />
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <!--Estos es para los iconos de los socials-->
