new lines of code in boxpark.css and boxPark.html

--- a/boxPark.html
+++ b/boxPark.html
@@ -30,15 +30,15 @@
 <!--JAVI BELOW-->
 
 <!--Header of boxpark-->
-<div class="header-boxpark">
-    <div class="header-boxpark-content">
-        <img src="img/boxpark-header-img.jpeg" alt="" class="header-boxpark-img">
-            <div class="header-boxpark-title">
-                <h1>What is madbox?</h1>
-            </div>
-    </div>
+<div class="header-boxpark-container">
+    <div class="header-boxpark-img">
+        <div class="header-boxpark-title-container">
+            <h1 id="h1-boxpark">WHAT IS MADBOX</h1>
+            <h3 id="h3-boxpark">Eat.Drink.Play</h3>
+        </div>
 </div>
-<!--Header of boxpark-->
+
+
 <!--Articles container-->
 
 
