--- a/boxPark.html
+++ b/boxPark.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
-    <link href="css/footer.css" rel="stylesheet" type="text/css" />
     <link href="css/boxpark.css" rel="stylesheet" type="text/css" />
-
+    <link href="css/footer.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BOXPARK</title>
@@ -33,14 +32,56 @@
 <div class="header-boxpark-container">
     <div class="header-boxpark-img">
         <div class="header-boxpark-title-container">
-            <h1 id="h1-boxpark">WHAT IS MADBOX</h1>
-            <h3 id="h3-boxpark">Eat.Drink.Play</h3>
+            <div class="header-item" id="h1-boxpark"> 
+                <h1>WHAT IS BOXPARK</h1>
+            </div>
+            <div class="h3-container">
+                <h3 id="h3-boxpark">EAT.DRINK.PLAY</h3>
+            </div>
         </div>
+    </div>
 </div>
 
 
-<!--Articles container-->
+<!--text container-->
+<div class="text-container-boxpark">
+    <p><strong> WITH THE HUMBLE ETHOS OF BRINGING SHIPPING CONTAINERS TO EAST LONDON, BOXPARK TRANSFORMED THE SPACE 
+        INTO THE WORLD’S FIRST POP-UP DINING AND SHOPPING DESTINATION IN 2011.</strong></p>
+    <p><strong>FAST-FORWARD NEARLY A DECADE WITH THREE VENUES AT ICONIC LOCATIONS, BOXPARK HAS BECOME THE BIGGEST FOOD, CULTURE AND SOCIAL HUB IN LONDON WITH LOCAL 
+        COMMUNITIES AT ITS HEART. THIS UNIQUE EXPERIENCE IS BASED ON BOXPARK’S EAT.DRINK.PLAY. PHILOSOPHY.</strong></p>
+</div>
 
+<!--Articles container boxpark-->
+<div class="articles-container">
+    <div class="article">
+        <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/bar2.jpg" 
+        data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
+        <div class="article-body">
+            <h3 class="article-title">Eat</h3>
+            <p class="article-text">Each BOXPARK venue offers an impressive selection of street food options from all over the world. With an assortment of small, independent street food traders and some of London's favourite restaurants, BOXPARK explores a range of global cuisines and guarantees to transport your taste buds.</p>
+        </div>
+    </div>
+    <div class="article">
+        <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/bar3.jpg" 
+        data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
+        <div class="article-body">
+            <h3 class="article-title">Drink</h3>
+            <p class="article-text">With its buzzing atmosphere, BOXPARK is the perfect spot to enjoy food and drink under one roof along with live music, entertainment or socialising with friends. Each venue boasts 3 – 4 bars both inside and on the terrace areas, including the popular BeatBox Bar serving craft beers, wines and spirits</p>
+        </div>
+    </div>
+    <div class="article">
+        <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/balls.jpg" 
+        data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
+        <div class="article-body">
+            <h3 class="article-title">Play</h3>
+            <p class="article-text">To make your visit to BOXPARK even better, each venue has its own year-round schedule of entertainment and a weekly community-led programme of events. BOXPARK Wembley has created its own leisure experience with a dedicated space for fun activities such as axe throwing, virtual reality experience, and a ‘PlayBox’ area which is home to shuffleboard, table tennis, pool and table football.</p>
+        </div>
+    </div>
+
+
+
+    </article>
+</div>
 
     <!--footer -->
  <div id="footer-placeholder">
