--- a/packs.html
+++ b/packs.html
@@ -12,6 +12,10 @@
     />
     <link href="css/packs.css" rel="stylesheet" type="text/css" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="css/footer.css" rel="stylesheet" type="text/css" />
+
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
     <title>Cursos</title>
   </head>
   <body>
@@ -175,76 +179,19 @@
 
 
 
-    <!--Javi-->
-    <footer class="footer">
-      <div class="footer-container">
-        <!--Hay dos contenedores principales dentro del footer left y rigth-->
+    <!--JAVI footer -->
+    <div id="footer-placeholder">
 
-        <!--footer left-->
-        <div class="footer-left">
-          <img src="#" alt="#" />
-          <!--Logo goes here-->
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-
-        <!--Footer right-->
-        <ul class="footer-right">
-          <li>
-            <h3>Information</h3>
-
-            <ul class="footer-box">
-              <li><a href="#"></a>Contact us</li>
-              <li><a href="#"></a>Become a partner</li>
-              <li><a href="#"></a>About us</li>
-              <li><a href="#"></a>Events</li>
-            </ul>
-          </li>
-          <li>
-            <h3>Location</h3>
-
-            <ul class="footer-box">
-              <li><a href="#"></a>120, West lane</li>
-              <li><a href="#"></a>28660</li>
-              <li><a href="#"></a>Madrid</li>
-              <li><a href="#"></a>Spain</li>
-            </ul>
-          </li>
-          <li class="socials">
-            <h3>Follow</h3>
-
-            <ul class="footer-socials">
-              <li>
-                <a href="#"><i class="fa fa-facebook"></i></a>Facebook
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>Twitter
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-youtube"></i></a>Youtube
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-instagram"></i></a>Instagram
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-bottom">
-        <div class="footer-bottom-left">
-          <p><span>All rights reserved</span></p>
-        </div>
-        <div class="footer-bottom-right">
-          <p>
-            Made with<span
-              aria-label="love"
-              class="gamut-8vrj74-HeartContainer e199n3s10"
-              >️❤️</span
-            >
-            in Madrid &copy;Madbox 2021
-          </p>
-        </div>
-      </div>
-    </footer>
+    </div>
+    
+    
+    <!--Estas líneas de código me permiten reusar el código que contiene footer.html-->
+    <script>
+    $(function(){
+      $("#footer-placeholder").load("footer.html");
+    });
+    </script>
+    <!--end of footer -->
     <script src="https://kit.fontawesome.com/6945a766f6.js" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
