added test-article img favicon and boxpark-img, boxpark.html boxpark.css and index.html modified

--- a/boxPark.html
+++ b/boxPark.html
@@ -7,9 +7,12 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/boxpark.css" rel="stylesheet" type="text/css" />
     <link href="css/footer.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>BOXPARK</title>
+    <title>Boxpark</title>
 </head>
 <body>
   <!-- Manu -->
@@ -29,61 +32,152 @@
 <!--JAVI BELOW-->
 
 <!--Header of boxpark-->
-<div class="header-boxpark-container">
-    <div class="header-boxpark-img">
-        <div class="header-boxpark-title-container">
-            <div class="header-item" id="h1-boxpark"> 
-                <h1>WHAT IS BOXPARK</h1>
+<div class="header-boxpark-container img-boxpark-header">
+    <div class="header-boxpark-title-container">
+        <div class="header-item" > 
+            <h1><span> WHAT IS BOXPARK</span></h1>
+            <h3 id="h3-boxpark">EAT.DRINK.PLAY</h3>
+        </div>
+    </div>
+</div>
+<!--trustpilot section boxpark-->
+<div class="trustpilot-container">
+    <div class="trustpilot-img-container">
+        <img src="img/trustpilot-img.png" alt="trustpilot-rating">
+    </div>
+</div>
+<!--first section -->
+<div class="first-boxpark-container">
+    <div class="first-boxpark-small">
+        <h2 class="h2-first-boxpark">GET ADVENTURE YOUR WAY</h2>
+      <div class="articles-first-container">
+        <div class="article-first">
+            <img class="article-img-first" data-src="holder.js/100px200/" alt="100%x200" src="img/paintball.jpg" 
+            data-holder-rendered="true" style="height: 300px; width: 300px; display: block;">
+            <div class="article-first-first-body">
+                <h3 class="article-first-title">EXPLORE THE PACKS</h3>
+                <p class="article-first-text">Choose from over 30+ dishes and our range of delicious extras</p>
             </div>
-            <div class="h3-container">
-                <h3 id="h3-boxpark">EAT.DRINK.PLAY</h3>
+            <div class="article-first-button">
+                <button id="first-section-button">
+                    BUILD YOUR BOX
+                </button>
             </div>
+
+        </div>
+        <div class="article-first">
+          <img class="article-img-first" data-src="holder.js/100px200/" alt="100%x200" src="img/ThemePark.jpg" 
+          data-holder-rendered="true" style="height: 300px; width: 300px; display: block;">
+          <div class="article-first-first-body">
+              <h3 class="article-first-title">LEVEL UP YOUR LUNCHES
+            </h3>
+              <p class="article-first-text">Perfect for reclaiming lunch breaks and nutritionally boosting your day</p>
+          </div>
+          <div class="article-first-button">
+            <button id="first-section-button">
+                BUILD YOUR BOX
+            </button>
+
+        </div>
+
+        </div>
+          <div class="article-first">
+              <img class="article-img-first" data-src="holder.js/100px200/" alt="100%x200" src="img/bar3.jpg" 
+              data-holder-rendered="true" style="height: 300px; width: 300px; display: block;">
+              <div class="article-first-first-body">
+                  <h3 class="article-first-title">TAKE OUR QUIZ</h3>
+                  <p class="article-first-text">Discover which dishes our chefs recommend just for you</p>
+              </div>
+              <div class="article-first-button">
+                <button id="first-section-button">
+                    BUILD YOUR BOX
+                </button>
+            </div>
+
+          </div>
+      </div>
+    </div>
+</div>
+<!--SECOND SECTION-->
+<div class="second-container">
+    <div class="second-container-small">
+        <div class="second-container-left">
+
+        </div>
+        <div class="second-container-right">
+            <h2>EVERYONE IS WELCOME AT OUR TABLE</h2>
+            <p>We know trying to eat vegan can be hard, so we just try and make it easy.</p>
+            <br>
+            <p>
+                Discover 100% plant-based meals, prepared by chefs and flash-frozen for freshness and convenience. So they taste as good in your kitchen as they do in ours.
+            </p>
+            <a href="" class="learn-more"><strong>learn more</strong></a>
+        </div>
+    </div>
+</div>
+
+<!--STRIP SECTION-->
+
+<div class="strip-container">
+    <div class="strip-container-small">
+        <div class="small-container-logos">
+            <div class="logo-article-body">
+                <div class="logo-article-logo">
+                    <i class="fa fa-cutlery" aria-hidden="" id="logo-logo-section"></i>
+
+                </div>
+                <div class="logo-article-text"></div>
+            </div>
+            <div class="logo-article-body"></div>
+            <div class="logo-article-body"></div>
+        </div>
+        <div class="small-container-button">
+            <button id="strip-button">TRY US NOW</button>
         </div>
     </div>
 </div>
 
 
 <!--text container-->
-<div class="text-container-boxpark">
-    <p><strong> WITH THE HUMBLE ETHOS OF BRINGING SHIPPING CONTAINERS TO EAST LONDON, BOXPARK TRANSFORMED THE SPACE 
-        INTO THE WORLD’S FIRST POP-UP DINING AND SHOPPING DESTINATION IN 2011.</strong></p>
-    <p><strong>FAST-FORWARD NEARLY A DECADE WITH THREE VENUES AT ICONIC LOCATIONS, BOXPARK HAS BECOME THE BIGGEST FOOD, CULTURE AND SOCIAL HUB IN LONDON WITH LOCAL 
-        COMMUNITIES AT ITS HEART. THIS UNIQUE EXPERIENCE IS BASED ON BOXPARK’S EAT.DRINK.PLAY. PHILOSOPHY.</strong></p>
+<div class="main-boxpark-container">
+
+    <div class="text-container-boxpark">
+        <p><strong> WITH THE HUMBLE ETHOS OF BRINGING SHIPPING CONTAINERS TO EAST LONDON, BOXPARK TRANSFORMED THE SPACE 
+            INTO THE WORLD’S FIRST POP-UP DINING AND SHOPPING DESTINATION IN 2011.</strong></p>
+        <p><strong>FAST-FORWARD NEARLY A DECADE WITH THREE VENUES AT ICONIC LOCATIONS, BOXPARK HAS BECOME THE BIGGEST FOOD, CULTURE AND SOCIAL HUB IN LONDON WITH LOCAL 
+            COMMUNITIES AT ITS HEART. THIS UNIQUE EXPERIENCE IS BASED ON BOXPARK’S EAT.DRINK.PLAY. PHILOSOPHY.</strong></p>
+    </div>
+
+    <!--Articles container boxpark-->
+    <div class="articles-container">
+        <div class="article">
+            <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/bar2.jpg" 
+            data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
+            <div class="article-body">
+                <h3 class="article-title">Eat</h3>
+                <p class="article-text">Each BOXPARK venue offers an impressive selection of street food options from all over the world. With an assortment of small, independent street food traders and some of London's favourite restaurants, BOXPARK explores a range of global cuisines and guarantees to transport your taste buds.</p>
+            </div>
+        </div>
+        <div class="article">
+            <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/bar3.jpg" 
+            data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
+            <div class="article-body">
+                <h3 class="article-title">Drink</h3>
+                <p class="article-text">With its buzzing atmosphere, BOXPARK is the perfect spot to enjoy food and drink under one roof along with live music, entertainment or socialising with friends. Each venue boasts 3 – 4 bars both inside and on the terrace areas, including the popular BeatBox Bar serving craft beers, wines and spirits</p>
+            </div>
+        </div>
+        <div class="article">
+            <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/balls.jpg" 
+            data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
+            <div class="article-body">
+                <h3 class="article-title">Play</h3>
+                <p class="article-text">To make your visit to BOXPARK even better, each venue has its own year-round schedule of entertainment and a weekly community-led programme of events. BOXPARK Wembley has created its own leisure experience with a dedicated space for fun activities such as axe throwing, virtual reality experience, and a ‘PlayBox’ area which is home to shuffleboard, table tennis, pool and table football.</p>
+            </div>
+        </div>
+    </div>
 </div>
 
-<!--Articles container boxpark-->
-<div class="articles-container">
-    <div class="article">
-        <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/bar2.jpg" 
-        data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
-        <div class="article-body">
-            <h3 class="article-title">Eat</h3>
-            <p class="article-text">Each BOXPARK venue offers an impressive selection of street food options from all over the world. With an assortment of small, independent street food traders and some of London's favourite restaurants, BOXPARK explores a range of global cuisines and guarantees to transport your taste buds.</p>
-        </div>
-    </div>
-    <div class="article">
-        <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/bar3.jpg" 
-        data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
-        <div class="article-body">
-            <h3 class="article-title">Drink</h3>
-            <p class="article-text">With its buzzing atmosphere, BOXPARK is the perfect spot to enjoy food and drink under one roof along with live music, entertainment or socialising with friends. Each venue boasts 3 – 4 bars both inside and on the terrace areas, including the popular BeatBox Bar serving craft beers, wines and spirits</p>
-        </div>
-    </div>
-    <div class="article">
-        <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/balls.jpg" 
-        data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
-        <div class="article-body">
-            <h3 class="article-title">Play</h3>
-            <p class="article-text">To make your visit to BOXPARK even better, each venue has its own year-round schedule of entertainment and a weekly community-led programme of events. BOXPARK Wembley has created its own leisure experience with a dedicated space for fun activities such as axe throwing, virtual reality experience, and a ‘PlayBox’ area which is home to shuffleboard, table tennis, pool and table football.</p>
-        </div>
-    </div>
-
-
-
-    </article>
-</div>
-
-    <!--footer -->
+        <!--footer -->
  <div id="footer-placeholder">
 
  </div>
