--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BOXMad</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/footer.css" rel="stylesheet" type="text/css" />
-
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <!--Estos es para los iconos de los socials-->
