--- a/boxPark.html
+++ b/boxPark.html
@@ -20,11 +20,10 @@
     <header class = "logo"></header>
     <nav class = "nav">
         <ul class= "navList">
-            <li><img src=""> </li>
-            <li><a class = "navA" href="#">HOME</a></li>
+            <li><a class = "navA" href="index.html">HOME</a></li>
             <li><a class = "navA" href="boxPark.html">BOXPARK</a></li>
-            <li><a class = "navA" href="#">PACKS</a></li>
-            <li><a class = "navA" href="#">CONTACTO</a></li>
+            <li><a class = "navA" href="packs.html">PACKS</a></li>
+            <li><a class = "navA" href="contact.html">CONTACTO</a></li>
         </ul>
     </nav>
 </div>
