added youtube-icon and changed some font families

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="header-container-index">
             <div class="header-index-img">
                 <div class="header-text-container">
-                    <a id="title-header" href="boxPark.html"><h1>COMIENZA LA AVENTURA</h1></a>
+                    <a id="title-header" href="boxPark.html"><h1 class="h1-main">COMIENZA LA AVENTURA</h1></a>
                 </div>
             </div>
         </div>
