--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,13 @@
         </ul>
       </nav>
     </div>
-    <div id="aboutContainer">
+    
       <div class="form-box" id="form">
         <div class="row">
           <h2>Nosotros estamos felices de oirle</h2>
         </div>
+
+        <!-- formulary -->>
 
         <div class="row">
           <form class="contact-form">
@@ -108,6 +110,22 @@
           </form>
         </div>
       </div>
-    </div>
+              <!--footer -->
+
+ <div id="footer-placeholder">
+
+</div>
+   
+   
+   <!--Estas líneas de código me permiten reusar el código que contiene footer.html-->
+   <script>
+   $(function(){
+     $("#footer-placeholder").load("footer.html");
+   });
+   </script>
+   <!--end of footer -->
+    
+
+
   </body>
 </html>
