the about page is added to the menu and the content of the contact page is centered

--- a/about.html
+++ b/about.html
@@ -15,13 +15,14 @@
 
   </head>
   <body>
-      <!-- Manu -->
+      <!-- Menu -->
       <div class = "header">
         <header class = "logo"></header>
         <nav class = "nav">
             <ul class= "navList">
                 <li><img src=""> </li>
                 <li><a class = "navA" href="index.html">HOME</a></li>
+                <li><a class = "navA" href="about.html">ABOUT</a></li>
                 <li><a class = "navA" href="boxPark.html">BOXPARK</a></li>
                 <li><a class = "navA" href="packs.html">PACKS</a></li>
                 <li><a class = "navA" href="contact.html">CONTACTO</a></li>
