--- a/contact.html
+++ b/contact.html
@@ -18,26 +18,31 @@
     />
   </head>
   <body>
-    <!-- Manu -->
+    
+    <!-- Menu -->
+
     <div class="header">
       <header class="logo"></header>
       <nav class="nav">
         <ul class="navList">
           <li><img src="" /></li>
-          <li><a class="navA" href="index.html">HOME</a></li>
-          <li><a class="navA" href="boxPark.html">BOXPARK</a></li>
-          <li><a class="navA" href="packs.html">PACKS</a></li>
-          <li><a class="navA" href="contact.html">CONTACTO</a></li>
+          <li><a class = "navA" href="index.html">HOME</a></li>
+          <li><a class = "navA" href="about.html">ABOUT</a></li>
+          <li><a class = "navA" href="boxPark.html">BOXPARK</a></li>
+          <li><a class = "navA" href="packs.html">PACKS</a></li>
+          <li><a class = "navA" href="contact.html">CONTACTO</a></li>
         </ul>
       </nav>
     </div>
-    
+
+    <!--container-->
+
       <div class="form-box" id="form">
         <div class="row">
           <h2>Nosotros estamos felices de oirle</h2>
         </div>
 
-        <!-- formulary -->>
+        <!-- formulary -->
 
         <div class="row">
           <form class="contact-form">
