slider with cards first version

--- a/boxPark.html
+++ b/boxPark.html
@@ -145,13 +145,31 @@
         <div class="img-box img-container img-boxpark-testimonial"></div>
     </div>
 </div>
-<!--TESTIMONIAL SECTION 2-->
-<div class="testi-section2-container">
-    <div class="testi-section2-small">
-        
+<!--SLIDER PARTNERS SECTION -->
+
+<div class="slider-container">
+    <div class="slider-title">
+        <h1>
+            JOIN THOUSANDS OF HAPPY CUSTOMERS
+        </h1>
+        <p>We love seeing you with your deliveries. Tag @allplants and show us your #allplantsboxie for a chance to get featured!</p>
+    </div>
+    <div class="slider-container-big">
+      <div id="slider-container-small">
+          <span onclick="slideRight()" class="btn"></span>
+            <div id="slider">
+              <div class="slide" class="img-container-slider" id="img-slider-1" data-modal-target="#modal"><span></span></div>
+              <div class="slide" class="img-container-slider" id="img-slider-2"><span></span></div>
+              <div class="slide" class="img-container-slider" id="img-slider-3"><span></span></div>
+              <div class="slide" class="img-container-slider" id="img-slider-4"><span></span></div>
+              <div class="slide" class="img-container-slider" id="img-slider-5"><span></span></div>
+              <div class="slide" class="img-container-slider" id="img-slider-6"><span></span></div>
+            </div>
+          <span onclick="slideLeft()" class="btn"></span>
+      </div>
     </div>
 </div>
-
+<!--MODAL POPUP BUTTON-->
 <button data-modal-target="#modal">Open Modal</button>
 <div class="modal" id="modal">
   <div class="modal-header">
