--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
           <!--footer left-->
           <div class="footer-left">
             <div class="footer-left-logo">
-              <img src="img/boxpark-logo-small.png" alt="#" id="logo-footer">  <!--Logo goes here-->
+              <img src="img/logoblack.png" alt="#" id="logo-footer">  <!--Logo goes here-->
             </div>
             <div class="footer-left-sponsors">
               <h4>Sponsors</h4>
