added new navigator

--- a/packs.html
+++ b/packs.html
@@ -20,19 +20,18 @@
     <title>Cursos</title>
   </head>
   <body>
-    <div class="header-content">
-      <div class="header">
-        <header class="logo"></header>
-        <nav class="nav">
-          <ul class="navList">
-            <li><a class="navA" href="index.html">HOME</a></li>
-            <li><a class="navA" href="boxPark.html">BOXPARK</a></li>
-            <li><a class="navA" href="packs.html">PACKS</a></li>
-            <li><a class="navA" href="contact.html">CONTACTO</a></li>
-          </ul>
-        </nav>
+    <header class="header-nav">
+      <div clas="nav-logo">
+        <img class="img-nav" src="img/logo-transparent.png" />
       </div>
-    </div>
+      <nav class="nav">
+        <a href="index.html" class="btn-nav">HOME</a>
+        <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+        <a href="packs.html" class="btn-nav">SERVICES</a>
+        <a href="about.html" class="btn-nav">ABOUT US</a>
+        <a href="contact.html" class="btn-nav">CONTACT</a>
+      </nav>
+    </header>
     <!-- SERGIO -->
     <div class="header-container-pack">
       <div id="header-pack-img">
@@ -200,9 +199,7 @@
     <div id="promo-container">
       <div class="button-wrapper">
         <button type="button" class="btn btn-primary but-course">Surf</button>
-        <button type="button" class="btn btn-primary but-course">
-          Climbing
-        </button>
+        <button type="button" class="btn btn-primary but-course">Climbing</button>
       </div>
     </div>
     <div id="courses-container">
@@ -234,12 +231,9 @@
             </li>
             <li class="element-description">
               <i class="far fa-thumbs-up thumb-green"></i>
-              <p>Private Lessons</p>
+              <p>Private Lessons (optional)</p>
             </li>
-            <li class="element-description">
-              <i class="far fa-thumbs-up thumb-green"></i>
-              <p>Flexible Schedule</p>
-            </li>
+        
           </ul>
         </div>
 
@@ -290,11 +284,7 @@
               <i class="far fa-thumbs-up thumb-green"></i>
               <p>Private Lessons</p>
             </li>
-            <li class="element-description">
-              <i class="far fa-thumbs-up thumb-green"></i>
-              <p>Flexible Schedule</p>
-            </li>
-            Official certification
+            
           </ul>
         </div>
 
@@ -347,10 +337,6 @@
             </li>
             <li class="element-description">
               <i class="far fa-thumbs-up thumb-green"></i>
-              <p>Flexible Schedule</p>
-            </li>
-            <li class="element-description">
-              <i class="far fa-thumbs-up thumb-green"></i>
               <p>Official certification</p>
             </li>
           </ul>
@@ -359,7 +345,7 @@
         <div class="list-description">
           <div class="description-info">
             <span class="logo-act"><i class="far fa-calendar-alt"></i></span>
-            <p>Schedule: Monday and Wednesday</p>
+            <p>Schedule: Flexible</p>
           </div>
           <div class="description-info">
             <span class="logo-act"
@@ -369,7 +355,7 @@
           </div>
           <div class="description-info">
             <i class="fas fa-users"></i>
-            <p>Maximum group of 5</p>
+            <p>Maximum group of 3</p>
           </div>
         </div>
       </div>
