--- a/index.html
+++ b/index.html
@@ -23,17 +23,16 @@
   </head>
   <body>
       <!-- Manu -->
-        <div class = "header">
-            <header class = "logo"></header>
-            <nav class = "nav">
-                <ul class= "navList">
-                    <li><a class = "navA" href="index.html">HOME</a></li>
-                    <li><a class = "navA" href="boxPark.html">BOXPARK</a></li>
-                    <li><a class = "navA" href="packs.html">PACKS</a></li>
-                    <li><a class = "navA" href="contact.html">CONTACTO</a></li>
-                </ul>
+        <header class="header-nav">
+            <div clas="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
+            <nav class="nav">
+                <a href="index.html" class="btn-nav">HOME</a>
+                <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+                <a href="packs.html" class="btn-nav">SERVICES</a>
+                <a href="about.html" class="btn-nav">ABOUT US</a>
+                <a href="contact.html" class="btn-nav">CONTACT</a>
             </nav>
-        </div>
+        </header>
     
 <!-- SERGIO -->
 
