added responsive design to nav

--- a/boxPark.html
+++ b/boxPark.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/boxpark.css" rel="stylesheet" type="text/css" />
     <link href="css/footer.css" rel="stylesheet" type="text/css" />
+    <link href="css/components.css" rel="stylesheet" type="text/css" />
+    <link href="css/responsive.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -19,17 +21,30 @@
   <body>
     <!-- Manu -->
     <header class="header-nav">
-      <div clas="nav-logo">
-        <img class="img-nav" src="img/logo-transparent.png" />
-      </div>
+      <div clas="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
       <nav class="nav">
-        <a href="index.html" class="btn-nav">HOME</a>
-        <a href="boxPark.html" class="btn-nav">BOXPARK</a>
-        <a href="packs.html" class="btn-nav">SERVICES</a>
-        <a href="about.html" class="btn-nav">ABOUT US</a>
-        <a href="contact.html" class="btn-nav">CONTACT</a>
+          <a href="index.html" class="btn-nav">HOME</a>
+          <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+          <a href="packs.html" class="btn-nav">SERVICES</a>
+          <a href="about.html" class="btn-nav">ABOUT US</a>
+          <a href="contact.html" class="btn-nav">CONTACT</a>
       </nav>
     </header>
+
+    <nav class="secundary-nav" role="navigation">
+      <div id="menuToggle">
+        <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Info</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+     </div>
+    </nav>
 
     <!--JAVI BELOW-->
 
