--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <title>BOXMad</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/footer.css" rel="stylesheet" type="text/css" />
+    <link href="css/components.css" rel="stylesheet" type="text/css" />
+    <link href="css/responsive.css" rel="stylesheet" type="text/css" />
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
@@ -16,18 +18,31 @@
   </head>
   <body>
       <!-- Manu -->
-      <div class = "header">
-        <header class = "logo"></header>
-        <nav class = "nav">
-            <ul class= "navList">
-                <li><img src=""> </li>
-                <li><a class = "navA" href="index.html">HOME</a></li>
-                <li><a class = "navA" href="boxPark.html">BOXPARK</a></li>
-                <li><a class = "navA" href="packs.html">PACKS</a></li>
-                <li><a class = "navA" href="contact.html">CONTACTO</a></li>
-            </ul>
+      <header class="header-nav">
+        <div clas="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
+        <nav class="nav">
+            <a href="index.html" class="btn-nav">HOME</a>
+            <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+            <a href="packs.html" class="btn-nav">SERVICES</a>
+            <a href="about.html" class="btn-nav">ABOUT US</a>
+            <a href="contact.html" class="btn-nav">CONTACT</a>
         </nav>
-      </div>
+      </header>
+
+      <nav class="secundary-nav" role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Info</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+       </div>
+      </nav>
       <div>
         <h1>Sobre Nosotros</h1>
         <h2>Team Building High and Low Ropes</h2>
