--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <title>BOXMad</title>
     <link rel="icon" type= "image/x-icon" href="img/logoblack.png"/>
     <link
@@ -14,6 +14,8 @@
     />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/footer.css" rel="stylesheet" type="text/css" />
+    <link href="css/responsive.css" rel="stylesheet" type="text/css" />
+    <link href="css/components.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
@@ -33,14 +35,29 @@
                 <a href="contact.html" class="btn-nav">CONTACT</a>
             </nav>
         </header>
+
+        <nav class="secundary-nav" role="navigation">
+            <div id="menuToggle">
+              <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Info</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+           </div>
+        </nav>
     
 <!-- SERGIO -->
 
         <div class="header-container-index">
             <div class="header-index-img">
-                <div class="header-text-container">
-                    <a id="title-header" href="boxPark.html"><h1 class="h1-main">COMIENZA LA AVENTURA</h1></a>
-                </div>
+                <a id="title-header" href="boxPark.html"><div class="header-text-container">
+                    <h1 class="h1-main">COMIENZA LA AVENTURA</h1>
+                </div></a>
             </div>
         </div>
 
