--- a/packs.html
+++ b/packs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,6 +14,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link href="css/footer.css" rel="stylesheet" type="text/css" />
     <link href="css/components.css" rel="stylesheet" type="text/css" />
+    <link href="css/responsive.css" rel="stylesheet" type="text/css" />
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
@@ -32,6 +33,20 @@
         <a href="contact.html" class="btn-nav">CONTACT</a>
       </nav>
     </header>
+    <nav class="secundary-nav" role="navigation">
+      <div id="menuToggle">
+        <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Info</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+     </div>
+    </nav>
     <!-- SERGIO -->
     <div class="header-container-pack">
       <div id="header-pack-img">
@@ -42,6 +57,7 @@
         </div>
       </div>
     </div>
+
 
     <div class="strip-container">
       <div class="strip-container-small">
