--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,6 @@
     />
   </head>
   <body>
-    
     <!-- Menu -->
 
     <div class="header">
@@ -26,111 +25,105 @@
       <nav class="nav">
         <ul class="navList">
           <li><img src="" /></li>
-          <li><a class = "navA" href="index.html">HOME</a></li>
-          <li><a class = "navA" href="about.html">ABOUT</a></li>
-          <li><a class = "navA" href="boxPark.html">BOXPARK</a></li>
-          <li><a class = "navA" href="packs.html">PACKS</a></li>
-          <li><a class = "navA" href="contact.html">CONTACTO</a></li>
+          <li><a class="navA" href="index.html">HOME</a></li>
+          <li><a class="navA" href="about.html">ABOUT</a></li>
+          <li><a class="navA" href="boxPark.html">BOXPARK</a></li>
+          <li><a class="navA" href="packs.html">PACKS</a></li>
+          <li><a class="navA" href="contact.html">CONTACTO</a></li>
         </ul>
       </nav>
     </div>
 
     <!--container-->
 
-      <div class="form-box" id="form">
-        <div class="row">
-          <h2>Nosotros estamos felices de oirle</h2>
-        </div>
-
-        <!-- formulary -->
-
-        <div class="row">
-          <form class="contact-form">
-            <div class="row">
-              <div class="col span-1-of-3">
-                <label for="name">Nombre</label>
-              </div>
-              <div class="col span-2-of-3">
-                <input
-                  type="text"
-                  name="name"
-                  id="name"
-                  placeholder="Tu nombre"
-                  required
-                />
-              </div>
-            </div>
-            <div class="row">
-              <div class="col span-1-of-3">
-                <label for="email">Email</label>
-              </div>
-              <div class="col span-2-of-3">
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  placeholder="Tu email"
-                  required
-                />
-              </div>
-            </div>
-            <div class="row">
-              <div class="col span-1-of-3">
-                <label for="find-us">¿Como nos encontraste?</label>
-              </div>
-              <div class="col span-2-of-3">
-                <select name="find-us" id="find-us">
-                  <option value="friends" selected>Amigos</option>
-                  <option value="search">Buscador</option>
-                  <option value="ad">Anuncio publicitario</option>
-                  <option value="other">Otros</option>
-                </select>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col span-1-of-3">
-                <label for="news">¿Boletin informativo?</label>
-              </div>
-              <div class="col span-2-of-3">
-                <input type="checkbox" name="news" id="news" checked /> Si Por
-                favor
-              </div>
-            </div>
-            <div class="row">
-              <div class="col span-1-of-3">
-                <label>Escríbanos</label>
-              </div>
-              <div class="col span-2-of-3">
-                <textarea name="message" placeholder="Tu mensaje"></textarea>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col span-1-of-3">
-                <label>&nbsp;</label>
-              </div>
-              <div class="col span-2-of-3">
-                <input type="submit" value="Enviar" />
-              </div>
-            </div>
-          </form>
-        </div>
+    <div class="form-box" id="form">
+      <div class="row">
+        <h2>Nosotros estamos felices de oirle</h2>
       </div>
-              <!--footer -->
 
- <div id="footer-placeholder">
+      <!-- formulary -->
 
-</div>
-   
-   
-   <!--Estas líneas de código me permiten reusar el código que contiene footer.html-->
-   <script>
-   $(function(){
-     $("#footer-placeholder").load("footer.html");
-   });
-   </script>
-   <!--end of footer -->
-    
+      <div class="row">
+        <form class="contact-form">
+          <div class="row">
+            <div class="col span-1">
+              <label for="name">Nombre</label>
+            </div>
+            <div class="col span-2">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Tu nombre"
+                required
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1">
+              <label for="email">Email</label>
+            </div>
+            <div class="col span-2">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Tu email"
+                required
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1">
+              <label for="find-us">¿Como nos encontraste?</label>
+            </div>
+            <div class="col span-2">
+              <select name="find-us" id="find-us">
+                <option value="friends" selected>Amigos</option>
+                <option value="search">Buscador</option>
+                <option value="ad">Anuncio publicitario</option>
+                <option value="other">Otros</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1">
+              <label for="news">¿Boletin informativo?</label>
+            </div>
+            <div class="col span-2-of-3">
+              <input type="checkbox" name="news" id="news" checked /> Si Por
+              favor
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1">
+              <label>Escríbanos</label>
+            </div>
+            <div class="col span-2">
+              <textarea name="message" placeholder="Tu mensaje"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1">
+              <label>&nbsp;</label>
+            </div>
+            <div class="col span-2">
+              <input type="submit" value="Enviar" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!--footer -->
 
+    <div id="footer-placeholder"></div>
 
+    <!--Estas líneas de código me permiten reusar el código que contiene footer.html-->
+    <script>
+      $(function () {
+        $("#footer-placeholder").load("footer.html");
+      });
+    </script>
+    <!--end of footer -->
   </body>
 </html>
