changes commited to boxpark.css and html

--- a/boxPark.html
+++ b/boxPark.html
@@ -18,18 +18,17 @@
   </head>
   <body>
     <!-- Manu -->
-    <div class="header">
-      <header class="logo"></header>
+    <header class="header-nav">
+      <div clas="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
       <nav class="nav">
-        <ul class="navList">
-          <li><a class="navA" href="index.html">HOME</a></li>
-          <li><a class="navA" href="boxPark.html">BOXPARK</a></li>
-          <li><a class="navA" href="packs.html">PACKS</a></li>
-          <li><a class="navA" href="contact.html">CONTACTO</a></li>
-        </ul>
+          <a href="index.html" class="btn-nav">HOME</a>
+          <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+          <a href="packs.html" class="btn-nav">SERVICES</a>
+          <a href="about.html" class="btn-nav">ABOUT US</a>
+          <a href="contact.html" class="btn-nav">CONTACT</a>
       </nav>
-    </div>
-
+    </header>
+    
     <!--JAVI BELOW-->
     <!--Header of boxpark-->
     <div class="header-boxpark-container img-boxpark-header">
