--- a/about.html
+++ b/about.html
@@ -20,36 +20,34 @@
     />
   </head>
   <body>
-      <!-- Manu -->
-      <header class="header-nav">
-        <div clas="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
-        <nav class="nav">
-            <a href="index.html" class="btn-nav">HOME</a>
-            <a href="boxPark.html" class="btn-nav">BOXPARK</a>
-            <a href="packs.html" class="btn-nav">SERVICES</a>
-            <a href="about.html" class="btn-nav">ABOUT US</a>
-            <a href="contact.html" class="btn-nav">CONTACT</a>
-        </nav>
-      </header>
-
-      <nav class="secundary-nav" role="navigation">
-        <div id="menuToggle">
-          <input type="checkbox" />
-            <span></span>
-            <span></span>
-            <span></span>
-            <ul id="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Info</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-       </div>
+    <!-- Manu -->
+    <header class="header-nav">
+      <div clas="nav-logo">
+        <img class="img-nav" src="img/logo-transparent.png" />
+      </div>
+      <nav class="nav">
+        <a href="index.html" class="btn-nav">HOME</a>
+        <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+        <a href="packs.html" class="btn-nav">SERVICES</a>
+        <a href="about.html" class="btn-nav">ABOUT US</a>
+        <a href="contact.html" class="btn-nav">CONTACT</a>
       </nav>
-      <div class="wrap">
-        <h1>Sobre Nosotros</h1>
-        <h2>Team Building High and Low Ropes</h2>
-        <p class="parrafo underlined underlined--gradient">En BOXMad disponemos de las primeras y únicas instalaciones en Madrid y España de dinámicas. Es el campo de entrenamiento en naturaleza especialmente concebido para el mundo de la empresa, cuyo objetivo es desarrollar las competencias y habilidades relacionadas con la construcción de equipos de trabajo.
+    </header>
+
+    <nav class="secundary-nav" role="navigation">
+      <div id="menuToggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul id="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Info</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
 
     <!--content-->
     <div class="wrap">
