--- a/contact.html
+++ b/contact.html
@@ -22,35 +22,39 @@
   <body>
     <!-- Manu -->
     <header class="header-nav">
-      <div clas="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
+      <div clas="nav-logo">
+        <img class="img-nav" src="img/logo-transparent.png" />
+      </div>
       <nav class="nav">
-          <a href="index.html" class="btn-nav">HOME</a>
-          <a href="boxPark.html" class="btn-nav">BOXPARK</a>
-          <a href="packs.html" class="btn-nav">SERVICES</a>
-          <a href="about.html" class="btn-nav">ABOUT US</a>
-          <a href="contact.html" class="btn-nav">CONTACT</a>
+        <a href="index.html" class="btn-nav">HOME</a>
+        <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+        <a href="packs.html" class="btn-nav">SERVICES</a>
+        <a href="about.html" class="btn-nav">ABOUT US</a>
+        <a href="contact.html" class="btn-nav">CONTACT</a>
       </nav>
     </header>
 
     <nav class="secundary-nav" role="navigation">
       <div id="menuToggle">
         <input type="checkbox" />
-          <span></span>
-          <span></span>
-          <span></span>
-          <ul id="menu">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Info</a></li>
-              <li><a href="#">Contact</a></li>
-          </ul>
-     </div>
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul id="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Info</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </nav>
-    <div id="aboutContainer">
-      <div class="form-box" id="form">
-        <div class="row">
-          <h2>Nosotros estamos felices de oirle</h2>
-        </div>
+
+    <!--container-->
+
+    <div class="form-box" id="form">
+      <div class="row">
+        <h2>Nosotros estamos felices de oirle</h2>
+      </div>
 
       <!-- formulary -->
 
@@ -101,7 +105,7 @@
             <div class="col span-1">
               <label for="news">¿Boletin informativo?</label>
             </div>
-            <div class="col span-2-of-3">
+            <div class="col span-2">
               <input type="checkbox" name="news" id="news" checked /> Si Por
               favor
             </div>
